--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* body {
+    @apply font-sans transition duration-500 ease-in-out;
+}
+
+
+.dark-mode .container {
+    @apply bg-gray-800 text-white;
+} */
